--- a/desktop.ini
+++ b/desktop.ini
@@ -2,4 +2,4 @@
 InfoTip=Dieser Ordner wird online freigegeben.
 IconFile=C:\Program Files\Google\Drive\googledrivesync.exe
 IconIndex=16
-    
+IconResource=C:\Program Files\Google\Drive File Stream\52.0.6.0\GoogleDriveFS.exe,23
